# ZOO-Project

./: Dockerfile  Dockerfile-MOZJS  Dockerfile-MS8  Dockerfile-OSGeoLive  Dockerfile-nuxtclient  changelog  config.yaml  docker-compose.yml  env_nuxt.sample
docker/: .htaccess  default.conf  main.cfg  nginx-default.conf  nginx-start.sh  nuxtclient.conf  oas.cfg  security_service.py
docker/ciab/: Dockerfile
docker/mdl4eo/: Dockerfile
docs/install/: installation.rst
thirds/cgic206/: cgic.c
thirds/otb2zcfg/: CMakeLists.txt
thirds/saga2zcfg/: saga2zcfg.c
zoo-project/zoo-kernel/: configure.ac  service_internal.h  service_internal_python.c  service_internal_r.c  service_internal_saga.c  service_json.c  zoo_loader.c  zoo_service_loader.c
zoo-project/zoo-services/cgal/: Makefile  cgal_service.h  delaunay.c  voronoi.c
zoo-project/zoo-services/gdal/contour/: service.c
zoo-project/zoo-services/gdal/dem/: service.c
zoo-project/zoo-services/gdal/grid/: service.c
zoo-project/zoo-services/gdal/translate/: service.c
zoo-project/zoo-services/gdal/warp/: service.c
zoo-project/zoo-services/ogr/base-vect-ops/: service.c
zoo-project/zoo-services/utils/security/basicAuth/: service.c
